--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
                         <a href="index.html" class="nav-link text-white">Principal</a>
                     </li>
                     <li class="nav-item">
-                        <a href="privacidade.html" class="nav-link text-white">Politica de privacidade</a>
+                        <a href="privacidade.html" class="nav-link text-white">Politica de privacidade </a>
+                    </li>
+                    <li>
+                        <a href="termos.html" class="nav-link text-white">Temos de Uso </a>
+                    </li>
+                    <li>
+                        <a href="trocas.html" class="nav-link text-white">Trocas e Devoluções</a>
+                    </li>
+                    <li>
                     </li>
                 </ul>
 
@@ -543,25 +551,13 @@
             <div class="row py-3">
                 <div class="col-12 col-md-4 text-center text-md-left">
                     &copy;2023 - Central Dos Pets <br>
-                    Rua Digital Inexistente, 149, Recife - PE <br>
-                    CNPJ 12.345.678./0001-99
                 </div>
                 <div class="col-12 col-md-4 text-center">
                     <a href="privacidade.html" class="text-decoration-none text-dark">Política de Privacidade</a>
                     </br>
-                    <a href="termos.html" class="text-decoration-none text-dark">Temos de Uso</a>
-                    </br>
-                    <a href="quemsomos.html" class="text-decoration-none text-dark">Quem Somos</a>
-                    </br>
-                    <a href="trocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
-                    </br>
                 </div>
                 <div class="col-12 col-md-4 text-center text-md-right">
-                    <a href="#" class="text-decoration-none text-dark">Contato pelo Site</a>
-                    </br>
                     E-mail: <a href="centraldospets@contato.com" class="text-decoration-none text-dark">centraldospets@contato.com</a>
-                    <br>
-                    Telefone<a href="phone:91234-5678" class="text-decoration-none text-dark">(81) 91234-5678</a>
                 </div>
             </div>
         </div>
