--- a/trocas.html
+++ b/trocas.html
@@ -25,7 +25,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100;1,200;1,300;1,500&display=swap"
         rel="stylesheet">
     <!-- titulo da página -->
-    <title>Trocas e devoluções</title>
+    <title>Central dos pets | Trocas e devoluções</title>
 </head>
 
 <body style="min-width:372px;">
